--- a/index.html
+++ b/index.html
@@ -1,1 +1,262 @@
-<!DOCTYPE html><html><head><meta charset="utf-8"><meta name="viewport" content="width=device-width, initial-scale=1"><meta http-equiv="X-UA-Compatible" content="IE=edge"><title>debashisbarman | Introducing myself ...</title><meta name="description" content="Freelance web designer and developer; specialize in minimalist mobile-friendly development; passionate programmer and occasional blogger"><meta name="keywords" content="Freelance Web Designer, Debashis Barman, Responsive Web Design, Minimal Web Design"/><link rel="stylesheet" href="./css/kathamo.min.css"/><link rel="stylesheet" href="./css/db.min.css"/></head><body><header><div class="container"><div class="col-lg-12 col-md-12 col-sm-12"><p class="text-right hidden-sm">+91 88 76 342995 // <a href="mailto:deb.dbuniversity@gmail.com">Write to me</a></p><h1>Introducing myself ...</h1></div></div></header><main><div class="container"><div class="col-lg-offset-1 col-lg-6 col-md-8 col-sm-12 !text-justify"><p>Hello, world ! My name is Debashis Barman. I'm a <abbr>B. Tech.</abbr> student in Computer Science and Engineering in <a href="http://www.dbuniversity.ac.in/">Assam Don Bosco University</a>. I work as a freelance web designer and developer. I specialize in minimalist and mobile friendly development. Some of my projects are available on <a href="https://github.com/debashisbarman/">Github</a> and <a href="http://behance.net/debashisbarman/">Behance</a>. <img class="db pull-right hidden-sm" src="./images/db.gif"></p><p>My interests lie primarily on computer programming, web designing and development, internet and android application development. I’m a fan of all things creative and I can say that I’m happiest when brainstorming and sketching new ideas. Once I was a prolific writer, now the art is dying.</p><p>I'm a passionate programmer with some knowledge in C, C++, Java, Android, Assembly, Shell and Python. I love writing HTML, XML, CSS, Bootstrap, Javascript, jQuery, Markdown and PhP. My recent projects include PhD Project Management software, Manipulation Detection Code generator, <a href="http://kathamo.github.io/">Kathamo CSS framework</a>, an official website for <a href="http://www.kenmanipur.org/">Knowledge Exchange Network</a>, a personal website for <a href="http://www.surajitbarman.in/">Dr. Surajit Barman</a>, an android based application for Assam Don Bosco University. Some of my ongoing projects include the official website for North Kamrup College, an official website for Prajyukttam 2015 along with its official android application. I'm also working on a project for crime scene detection through video surveillance.</p><p>You can follow me on <a href="https://twitter.com/@iDebashisBarman/">Twitter</a> and <a href="http://debashisbarman.tumblr.com/">Tumblr</a> and learn about stuff I find interesting, as well as some articles I decide to write down, projects I’m working on and drawings that I occasionally find the time to make.</p><p>For more information, please go through my <a href="./assets/DebashisBarmanCV.pdf">curriculum vitae</a> (PDF).</p><p>Thank you.</p><p><img class="dbsign" src="./images/dbsign.gif"><br>Debashis Barman<span class="visible-sm">Contact : +91 88 76 342995<br>Email : <a href="./DebashisBarmanCV.pdf">deb.dbuniversity@gmail.com</a></span></p></div></div></main><footer><div class="container"><div class="col-lg-12 col-md-12 col-sm-12"><p>&copy; 2015 Debashis Barman. Last updated on Sunday, 16 August 2015.</p></div></div></footer><script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-49449513-1', 'auto');ga('send', 'pageview');</script></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<title>Debashis Barman | Designer & Developer</title>
+<meta name="description" content="Designer and developer; specialize in fluid design and mobile development; passionate programmer and occasional blogger">
+<meta name="keywords" content="Web Designer, Developer Debashis Barman, Responsive Web Design, Minimal Web Design"/>
+<link rel="shortcut icon" href="./img/logo.png" type="image/x-icon" />
+<link rel="stylesheet" href="./css/kathamo.min.css"/>
+<style>
+@font-face {
+  font-family: "Roboto"
+  font-style: normal;
+  font-weight: 400;
+  src: url("./font/Roboto.woff") format("woff");
+}
+
+html {
+  font-size: 100%;
+}
+
+body {
+  width: 100%;
+  height: 100vh;
+  display: table;
+  font-family: "Roboto";
+  color: #fff;
+  text-transform: uppercase;
+  background-image: url('./img/bg.jpeg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  border: 13px solid #fff;
+}
+
+@media (max-width: 767px) {
+
+  body {
+    background-position: right center;
+  }
+
+}
+
+.container-fluid {
+  width: 89%;
+  margin: 0 auto;
+}
+
+@media (max-width: 767px) {
+
+  .container-fluid {
+    width: 90%;
+    margin: 0 auto;
+  }
+
+}
+
+.vertical-center {
+  display: table-cell;
+  vertical-align: middle;
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  .vertical-center {
+    padding-top: 5%;
+    padding-bottom: 5%;
+  }
+
+}
+
+.divider {
+  height: 2px;
+  background-color: #fff;
+}
+
+@media (min-width: 1024px) {
+
+  .divider {
+    width: 40px;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  .divider {
+    width: 8%;
+  }
+
+}
+
+@media (max-width: 767px) {
+
+  .divider {
+    width: 13%;
+  }
+
+}
+
+.icon-wrapper {
+  text-align: right;
+}
+
+@media (max-width: 767px) {
+
+  .icon-wrapper {
+    margin-top: -21px;
+    text-align: left;
+  }
+
+}
+
+.icon {
+  width: 34px;
+  height: 34px;
+  padding: 7px;
+  cursor: pointer;
+  border: 2px solid #fff;
+  border-radius: 50%;
+}
+
+@media (max-width: 767px) {
+
+  .icon {
+    width: 30px;
+    height: 30px;
+    margin-top: 13px; !Important
+    padding: 5px;
+  }
+
+}
+
+header h1 {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 5px;
+  line-height: 26px;
+  text-transform: uppercase;
+}
+
+@media (max-width: 768px) {
+
+  header h1 {
+    font-size: 13px;
+    line-height: 21px;
+    letter-spacing: 3px;
+  }
+
+}
+
+main h2 {
+  margin-bottom: 34px;
+  font-size: 55px;
+  font-weight: 400;
+  letter-spacing: 21px;
+  line-height: 89px;
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  main h2 {
+    font-size: 40px;
+    letter-spacing: 13px;
+    line-height: 65px;
+  }
+
+}
+
+@media (max-width: 767px) {
+
+  main h2 {
+    margin-bottom: 21px;
+    font-size: 28px;
+    letter-spacing: 8px;
+    line-height: 45px;
+  }
+
+}
+
+footer p {
+  margin-top: 0;
+  font-size: 21px;
+  font-weight: 400;
+  text-transform: initial;
+  letter-spacing: 1px;
+  line-height: 34px;
+}
+
+@media (min-width: 768px) and (max-width: 1023px) {
+
+  footer p {
+    font-size: 16px;
+    letter-spacing: 2px;
+    line-height: 28px;
+  }
+
+}
+
+@media (max-width: 767px) {
+
+  footer p {
+    font-size: 13px;
+    letter-spacing: 1px;
+    line-height: 21px;
+  }
+
+}
+
+a,
+a:active,
+a:hover {
+  color: #9ca9ba;
+  -webkit-tap-highlight-color: rgba(0,0,0, 0.0);
+  outline: none;
+}
+
+a.twitter:before {
+  width: 26px;
+  height: 26px;
+  background-image: url('./img/twitter.png');
+}
+
+</style>
+</head>
+<body>
+<div class="vertical-center">
+<div class="container-fluid">
+<header class="clearfix">
+<div class="col-lg-12 col-md-12 col-sm-12">
+<h1 class="title">Debashis Barman</h1>
+</div>
+</header>
+<div class="col-lg-12 col-md-12 col-sm-12">
+<div class="divider"></div>
+</div>
+<main class="clearfix">
+<div class="col-lg-12 col-md-12 col-sm-12">
+<h2>Design,<br>
+Develop &<br>
+Distribute</h2>
+</div>
+</main>
+<footer class="clearfix">
+<div class="col-lg-6 col-md-6 col-sm-12">
+<p>Follow on <a class="twitter" href="https://twitter.com/@iDebashisBarman" target="_blank">@iDebashisBarman</a></p>
+</div>
+<div class="col-lg-6 col-md-6 col-sm-12">
+<p class="icon-wrapper">
+<a href="https://github.com/debashisbarman/" target="_blank"><img class="icon" src="./img/github.png"></a>
+&emsp;
+<a href="https://behance.net/debashisbarman/" target="_blank"><img class="icon" src="./img/behance.png"></a>
+&emsp;
+<a href="https://medium.com/@iDeb/" target="_blank"><img class="icon" src="./img/medium.png"></a>
+</p>
+</div>
+</footer>
+</div>
+</div>
+</body>
+</html>
